--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 buildscript {
     ext {
         compose_version = '1.1.1'
+        hilt_version = '2.40'
+    }
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 plugins {
@@ -12,3 +16,4 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
