--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,12 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'io.github.raamcosta.compose-destinations:core:1.3.4-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.3.4-beta'
+    testImplementation "io.mockk:mockk:1.12.3"
+    testImplementation "com.google.truth:truth:1.1.3"
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 }
